Fix/ Image visualization

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -8,6 +8,31 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item is-fullheight-with-navbar" href="#" >
+                <img src='../img/Logo.png' width="80" height="200"/>
+                </a>
+
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                <a class="navbar-item">
+                    Nosotros
+                </a>
+
+                <a class="navbar-item">
+                    Reservaciones
+                </a>
+            </nav>
+    </div>
     <div class=" columns is-vcentered has-background-grey-lighter has-text-centered">
         <div class="column p-6">
             <div class="content is-large">
@@ -20,7 +45,7 @@
             </div>
         </div>
         <div class="column is-7">
-            <img src="../../img/intro16-9.jpg" alt="" >
+            <img src="../img/intro16-9.jpg" alt="" >
         </div>
     </div>
     <div class="content has-background-black">
@@ -44,10 +69,14 @@ CP 25000
                 </p>
             </div>
             <div class="column is-right">
-                <img src="../../img/banner sm.png" alt="">
+                <img src="../img/banner sm.png" alt="">
             </div>
 
         </div>
+    </div>
+    <div class="columns">
+        <div class="column"></div>
+        <div class="column"></div>
     </div>
 </body>
 </html>
